--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "firebase": "^7.24.0",
     "google-map-react": "^2.1.8",
     "history": "^5.0.0",
+    "node-geocode": "^0.2.0",
     "react": "^16.14.0",
     "react-confirm-alert": "^2.6.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.14.0",
     "react-dropdown-select": "^4.5.2",
+    "react-dropzone-uploader": "^2.11.0",
     "react-images-upload": "^1.2.8",
     "react-modal": "^3.11.2",
     "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-select": "^3.1.0"
+    "react-select": "^3.1.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
